# macnetmon

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml
.github/workflows/: check.yml  release.yml
src/: app.rs  args.rs  config.rs  constants.rs  main.rs  model.rs  net.rs  theme.rs  ui.rs
