[package]
name = "macnetmon"
version = "0.1.2"
edition = "2021"
authors = ["mdsakalu"]
description = "Network interface bandwidth monitor for macOS"
repository = "https://github.com/mdsakalu/macnetmon"
license = "MIT"
readme = "README.md"
keywords = ["macos", "network", "monitor", "tui", "bandwidth"]
categories = ["command-line-utilities", "visualization"]
rust-version = "1.70"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"
